[package]
name = "kubectl_client"
version = "0.1.0"
edition = "2021"

[lib]
path = "lua/kubectl/client/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10.2", features = ["module", "luajit", "serialize", "async"] }
kube = { version = "0.99.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
serde = "1.0.218"
serde_yaml = "0.9.34"
http = "1.3.1"
serde_json_path = "0.7.2"
fern = "0.7.1"
chrono = "0.4.40"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"

# [profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
