[package]
name = "kubectl_client"
version = "0.1.0"
edition = "2021"

[lib]
path = "lua/kubectl/client/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
fern = "0.7.1"
futures = "0.3.31"
http = "1.3.1"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["runtime", "derive", "ws"] }
libc = "0.2"
mlua = { version = "0.10.2", features = ["module", "luajit", "serialize", "async"] }
serde = "1.0.218"
serde_json_path = "0.7.2"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

# [profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
