[package]
name = "kubectl-client"
version = "0.1.0"
edition = "2021"


[features]
telemetry = ["kubectl-telemetry"]

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
kubectl-telemetry = { path = "../kubectl-telemetry", optional = true }
cfg-if = "1.0"
chrono = "0.4.40"
fern = "0.7.1"
futures = "0.3.31"
http = "1.3.1"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.0.1", features = ["runtime", "derive", "ws"] }
libc = "0.2"
mlua = { version = "0.10.2", features = ["module", "luajit", "serialize", "async"] }
serde = "1.0.218"
serde_json_path = "0.7.2"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.41"
tracing-appender            = "0.2"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
rayon = "1.10.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
nix = {version ="0.30.1", features=["term", "fs"]}
k8s-metrics = "0.21.0"
tui-widgets = "0.4.1"
tokio-util = "0.7.15"
ctor = "0.4.2"
