[package]
name = "kubectl-client"
version = "0.1.0"
edition = "2021"


[features]
telemetry = ["kubectl-telemetry"]

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
kubectl-telemetry = { path = "../kubectl-telemetry", optional = true }
cfg-if = "1.0"
fern = "0.7.1"
futures = "0.3.31"
http = "1.3.1"
jiff = "0.2"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
k8s-metrics = "0.27.0"
kube = { version = "3.0.0", features = ["runtime", "derive", "ws", "gzip", "socks5"] }
libc = "0.2"
mlua = { version = "0.10.2", features = ["module", "luajit", "serialize", "async"] }
serde = "1.0.218"
serde_json_path = "0.7.2"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }
tracing = "0.1.41"
tracing-appender            = "0.2"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
rayon = "1.10.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
nix = {version ="0.30.1", features=["term", "fs"]}
tui-widgets = "0.4.1"
tokio-util = "0.7.15"
ctor = "0.4.2"
uuid = { version = "1.17.0", features = ["v4"] }
strip-ansi-escapes = "0.2"
sha2 = "0.10"
kubediff = { version = "1.2.0", default-features = false }
