[package]
name = "kubectl-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio                       = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing                     = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber          = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-opentelemetry       = "0.30"
tracing-appender            = "0.2"
opentelemetry               = "0.29"
opentelemetry_sdk           = { version = "0.29", features = ["trace", "rt-tokio"] }
opentelemetry-otlp          = { version = "0.29", features = ["trace", "grpc-tonic", "http-proto", "reqwest-client", "logs"] }
opentelemetry-semantic-conventions = "0.29"
